Update connection status on client. Notify board change
Also remove board when disconnecting.

--- a/ControllerClient.html
+++ b/ControllerClient.html
@@ -15,6 +15,7 @@
         <div id="container">
             <!-- Button to trigger modal -->
             <div id="overlay" class="userInformation">
+                <span data-bind="text: connectionStatus"></span><br />
                 <span class="usernameAndScore">
                     <span data-bind="text: userName"></span>
                     <br />
